--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,7 @@ header ul a {
     padding: 10px;
     border-radius: 20px;
     transition: 0.3s;
+    font-weight: bold;
 }
 
 header ul a:hover {
